--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <a href="ambient/index_en.html" class="button primary">Ambient restaurant</a>
             </li>
             <li>
-                <a href="snakegame/snake.html" class="button primary">Old school snake game</a>
+                <a href="snakeGame/snake.html" class="button primary">Old school snake game</a>
             </li>
             <li>
                 <a class="button primary" disabled>Friendly (in development)</a>
